<resources>
    <string name="app_name">Vocabulary</string>
    <string name="word">word</string>
    <string name="add_word">Add word</string>
    <string name="learn">Learn</string>
    <string name="translation">translation</string>
    <string name="check">Check</string>
    <string name="words">Words:</string>
    <string name="mistakes">Mistakes:</string>
    <string name="update_word">Update previous pair</string>
    <string name="update">Update</string>
    <string name="dump_db">Dump DB</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="send_notifications_every">Send notifications every…</string>
    <string name="turn_on_notifications">Update notifications</string>
    <string name="colon">:</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="since">since</string>
    <string name="dash">-</string>
    <string name="till">till</string>
    <string name="send">send</string>
    <string name="wordsLower">words</string>
    <string name="saveProgress">Save Progress</string>
    <string name="progressSaved">Progress has been saved!</string>
    <string name="askYandex">Ask Google</string>
    <string name="yandexLicenseText">Translated with Google RapidAPI</string>
    <string name="yandexLink"><a href="http://rapidapi.com">http://rapidapi.com</a></string>
    <string name="Get100">Get 100</string>
    <string name="Get50">Get 50</string>
    <string name="Get25">Get 25</string>
    <string name="Get10">Get 10</string>
    <string name="pickAmount">Pick amount</string>
    <string name="checkInetConnection">Check the internet connection!</string>
    <string name="findNext">Find next</string>
    <string name="noWords">No words matching specified pattern!</string>
    <string name="updSuccess">Updated successfully.</string>
    <string name="error">Operation failed!</string>
    <string name="noUpd">Nothing to update now!</string>
    <string name="achievements">Achievements</string>
    <string name="achievementsColon">Achievements:</string>
    <string name="wordsAdded">Words added:</string>
    <string name="allCorrect">All correct:</string>
    <string name="leastLearned">Least learned</string>
    <string name="random">Random</string>
</resources>
