<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".activity.GetLearningActivity">

    <LinearLayout
        android:id="@+id/getLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/get10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00FF00"
            android:onClick="startChallenge"
            android:text="@string/Get10" />

        <Button
            android:id="@+id/get25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000FF"
            android:onClick="startChallenge"
            android:text="@string/Get25"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/get50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:onClick="startChallenge"
            android:text="@string/Get50" />

        <Button
            android:id="@+id/get100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000"
            android:onClick="startChallenge"
            android:text="@string/Get100"
            android:textColor="#FFFFFF" />

    </LinearLayout>

    <Switch
        android:id="@+id/getRandomWordsSwitcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/leastLearnedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="36dp"
        android:text="@string/leastLearned"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/getRandomWordsSwitcher" />

    <TextView
        android:id="@+id/randomPairsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="36dp"
        android:text="@string/random"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/getRandomWordsSwitcher" />

</androidx.constraintlayout.widget.ConstraintLayout>