<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/switchNotifications"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".activity.NotificationSchedulingActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/hoursInputLayout"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="23dp"
        app:layout_constraintEnd_toStartOf="@+id/colon"
        app:layout_constraintTop_toBottomOf="@+id/sendNotievery">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hoursInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hours"
            android:inputType="number"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/sendNotievery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/send_notifications_every"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/colon"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:text="@string/colon"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sendNotievery" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/minutesInputLayout"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="23dp"
        app:layout_constraintStart_toEndOf="@+id/colon"
        app:layout_constraintTop_toBottomOf="@+id/sendNotievery">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/minutesInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/minutes"
            android:inputType="number"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/pairsNumber"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colon" />

    <Button
        android:id="@+id/updateNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_primary"
        android:onClick="switchNotifications"
        android:text="@string/turn_on_notifications"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dash" />

    <TextView
        android:id="@+id/beforeNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="8dp"
        android:text="@string/send"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/pairsNumber"
        app:layout_constraintTop_toBottomOf="@+id/hoursInputLayout" />

    <TextView
        android:id="@+id/afterNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:text="@string/wordsLower"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/pairsNumber"
        app:layout_constraintTop_toBottomOf="@+id/minutesInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/silentHoursSince"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:ems="5"
        android:inputType="time"
        app:layout_constraintEnd_toStartOf="@+id/dash"
        app:layout_constraintTop_toBottomOf="@+id/silentHours">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/silentHoursSinceInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/since"
            android:inputType="time"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/dash"
        android:layout_width="10dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/dash"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/silentHours" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/silentHoursTill"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="8dp"
        android:ems="5"
        android:inputType="time"
        app:layout_constraintStart_toEndOf="@+id/dash"
        app:layout_constraintTop_toBottomOf="@+id/silentHours">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/silentHoursTillInput"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/till"
            android:inputType="time"
            android:textSize="24sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/silentHours"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="16dp"
        android:inputType="textPersonName"
        android:text="Silent hours:"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pairsNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>