<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/wordInputLayout"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/wordInputLayoutInner"
            android:layout_width="285dp"
            android:layout_height="54dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/wordInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/word" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/pasteWordEn"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/paste_button"
            android:drawableBottom="@drawable/ic_paste"
            android:onClick="pasteFromClipboardEn"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/transInputLayout"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded"
        android:gravity="end"
        android:orientation="horizontal"
        android:paddingStart="0dp"
        android:paddingEnd="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordInputLayout">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/transInputLayoutInner"
            android:layout_width="285dp"
            android:layout_height="54dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/translationInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/translation" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/pasteWordRu"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/paste_button"
            android:drawableBottom="@drawable/ic_paste"
            android:onClick="pasteFromClipboardRu"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <!--    Add new word button-->
    <Button
        android:id="@+id/addWord"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_primary"
        android:onClick="addToVoc"
        android:text="@string/add_word"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/askYandex"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transInputLayout" />

    <Button
        android:id="@+id/learn"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded"
        android:onClick="learn"
        android:text="@string/learn"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addWord" />

    <Button
        android:id="@+id/update"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded"
        android:onClick="update"
        android:text="@string/update"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/learn"
        app:layout_constraintTop_toBottomOf="@+id/addWord" />

    <Button
        android:id="@+id/dumpDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_gray"
        android:onClick="dump"
        android:text="@string/dump_db"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/toNotiSettings" />

    <Button
        android:id="@+id/toNotiSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@drawable/rounded_gray"
        android:onClick="toNotificationSettings"
        android:text="@string/notification_settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dumpDb"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/askYandex"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_yellow"
        android:onClick="askYandex"
        android:text="@string/askYandex"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addWord"
        app:layout_constraintTop_toBottomOf="@+id/transInputLayout" />

    <TextView
        android:id="@+id/yandexLicenseText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yandexLicenseText"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/yandexLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordInputLayout" />

    <TextView
        android:id="@+id/yandexLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yandexLink"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toTopOf="@+id/transInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yandexLicenseText" />

</androidx.constraintlayout.widget.ConstraintLayout>