<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".activity.UpdateActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/wordInputLayout"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/wilEdit"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/word"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/transInputLayout"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wordInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tilEdit"
            android:layout_width="311dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/translation"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    Add new word button-->
    <Button
        android:id="@+id/addWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_green"
        android:onClick="updatePair"
        android:text="@string/update_word"
        android:textSize="18sp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transInputLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>